game event interval in init game for difficulties

--- a/captcha/captcha.html
+++ b/captcha/captcha.html
@@ -11,7 +11,7 @@
   <div id="captcha-container">
     <div id="garden-container">
       <div id="garden-instructions">
-          Harvest plants to solve the captcha.
+          Grow and Harvest plants to solve the captcha.
       </div>
       <div id="garden-win-text"></div>
       <div id="garden-event">
